Fixed responsiveness, added spacing between elements

--- a/style.css
+++ b/style.css
@@ -13,15 +13,16 @@ body {
 
 #bio img {
   border-radius: 2%;
-  max-width: 80vh; /* Height not width! */
+  max-width: 85vh; /* Height not width! */
   border: 1px solid #8d9093;
+  margin: 1.5vh 0 1.5vh 0;
 }
 
 h1 {
-  font-size: 2.6em;
+  font-size: 2.9em;
   font-family: 'Righteous', sans-serif;
   text-align: center;
-  padding-top: 1vh;
+  padding: 1vh;
   margin: 0;
 }
 
@@ -34,24 +35,30 @@ p {
   text-align: center;
 }
 
-li {
-  font-family: sans-serif;
-  font-weight: 400;
-  line-height: 1.1em;
-  text-align: center;
-}
-
-
 #mixcloud {
   width: 95%;
   padding: 0 2.5% 0 2.5%;
-
+  margin: 1.75% 0 1.75% 0;
 }
 
 #images {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+.gallery{
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+  justify-content: center;
+}
+
+figcaption {
+  font-family: sans-serif;
+  font-weight: 400;
+  line-height: 1.1em;
+  text-align: center;
 }
 
 button {
@@ -69,12 +76,14 @@ a button:hover {
   filter: alpha(opacity=85); /* IE */
 }
 
-/* Override social button styles */
+
 #picsDownload {
   border-radius: 4px;
-  height: auto;
-  width: auto;
+  height: auto; /* Override social button styles */
+  width: auto; /* Override social button styles */
   padding: .6em;
+  background-color: white;
+  margin: 0 0 5vh 0;
 }
 
 #contact {
@@ -102,7 +111,22 @@ a button:hover {
 }
 
 /* Mobile Portrait styles */
-@media screen and (orientation:portrait) and (max-width: 769px) {
+@media screen and (orientation:portrait) {
+
+  .parallaxOne {
+    background-image: url("Images/reynier-carl-440211-unsplash-transparent.jpg");
+    background-size: cover;
+  }
+
+  h1 {
+    font-size: 5.5em;
+  }
+
+  #bio img {
+    width: 90vw;
+    margin: 3% 5vw 3% 5vw; /* Up, Right, Bot, Left */
+    border-radius: 2%;
+  }
 
   p {
     line-height: 1.4;
@@ -110,33 +134,41 @@ a button:hover {
     margin: 0;
     padding: 1em;
     font-family: sans-serif;
-    font-weight: 300;
+    font-weight: 400;
     font-size: 2em;
   }
 
-  li {
+  #mixcloud {
+    margin: 3% 0 3% 0;
+  }
+
+  figcaption {
     font-family: sans-serif;
     line-height: 1.4em;
-    font-weight: 400;
-    font-size: 1.1em;
+    font-weight: 300;
+    font-size: 1.3em;
   }
 
-  #bio img {
-    width: 90vw;
-    margin: 3% 5vw 0% 5vw; /* Up, Right, Bot, Left */
-    border-radius: 2%;
+  #picsDownload{
+    border-radius: 4%;
+    padding: .8em;
+    font-size: 2.2em;
+    margin-bottom: 2em;
   }
 
-  .parallaxOne {
-      background-image: url("Images/reynier-carl-440211-unsplash-transparent.jpg");
-      background-size: cover;
+  #facebookBtn {
+   margin-right: 10vw;
+  }
+
+  #soundcloudBtn {
+   margin-right: 10vw;
   }
 }
 
   /* end of Mobile/Portrait styles */
 
 /* Mobile Landscape*/
-@media screen and (orientation:landscape) and (max-width: 769px) {
+@media screen and (orientation:landscape) {
 
 
 
